--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -12,7 +12,7 @@ $headings-font-family:    $header-font;
 
 // Semantic color scheme
 $brand-primary:   $blue;
-$brand-success:   $green;
+$brand-success:   $dark-blue;
 $brand-info:      $yellow;
 $brand-danger:    $red;
 $brand-warning:   $orange;
