--- a/app/assets/stylesheets/components/_wrapper.scss
+++ b/app/assets/stylesheets/components/_wrapper.scss
@@ -1,8 +1,9 @@
 
 .wrapper-image {
   background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 20%), image-url('image.jpeg');
-  height: 100vh;
+  height: 50%;
   background-size: cover !important;
   background-position: center;
   padding: 20px;
+  position: relative;
 }
