--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -2,8 +2,8 @@
  * Fonts
  * ------------------------------------- */
 // Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
-$base-font: "Open Sans", "Helvetica", "sans-serif";
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500|Poiret+One:400");
+$base-font: "Open Sans", "Helvetica", "sans-serif", "Poiret One";
 $header-font: "Raleway", "Helvetica", "sans-serif";
 
 // Local fonts (uncomment following lines)
@@ -31,6 +31,7 @@ $blue: #469AE0;
 $yellow: #FFFFC1;
 $orange: #E67E22;
 $green: #32B796;
+$dark-blue: #003355;
 
 // Gray scale
 $gray-darker:  lighten(#000, 13.5%); // #222
