--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -9,14 +9,17 @@
   <div class="row">
     <% @cocktails.each do |cocktail| %>
     <div class="col-xs-12 col-sm-4 card">
-      <%= link_to cl_image_tag(cocktail.photo, :format => :png, :transformation=>[
-  {:width=>100, :height=>100, :radius=>"10", :crop=>"fit"},
-  {:width=>100}
-  ]), cocktail %>
+      <a href=<%= cocktail_path cocktail.id %> >
+        <%= cl_image_tag(
+          cocktail.photo,
+          :format => :png,
+          :transformation=> [
+            {:width=>100, :height=>100, :radius=>"10", :crop=>"fit"},
+            {:width=>100}
+          ])%>
+      </a>
       <h2 class="card-description"> <%= cocktail.name %> </h2>
     </div>
     <% end %>
   </div>
 </div>
-
-<%=  %>
